--- a/config.json
+++ b/config.json
@@ -1,16 +1,15 @@
 {
-    "name": "FeatureMap",
-    "className": "CustomApp",
-    "server": "demo02.rallydev.com",
-    "sdk": "2.0rc1",
-    "remote_javascript": [
-    ],
-    "javascript": [
-        "src/App.js"
-    ],
-    "remote_css": [
-    ],
-    "css": [
-        "styles/app.css"
-    ]
+   "name": "FeatureMap",
+   "className": "CustomApp",
+   "server": "https://rally1.rallydev.com",
+   "sdk": "2.0rc1",
+   "remote_javascript": [],
+   "javascript": [
+      "src/App.js",
+      "src/raphael-min.js"
+   ],
+   "remote_css": [],
+   "css": [
+      "styles/app.css"
+   ]
 }
